--- a/project.yaml
+++ b/project.yaml
@@ -24,3 +24,5 @@ actions:
     outputs:
       moderately_sensitive:
         graph: output/event_count_time_series.svg
+        rate_graph: output/event_rate_time_series.svg
+        tables: output/table_*.csv
