--- a/project.yaml
+++ b/project.yaml
@@ -33,7 +33,7 @@ actions:
     run: cohortextractor:latest generate_cohort --study-definition study_definition_measures --index-date-range "2021-01-01 to 2020-02-28 by month"
     outputs:
       highly_sensitive:
-        measure_data: output/input_measu*.csv
+        measure_data: output/input_meas*.csv
 
   calculate_measures:
     run: cohortextractor:latest  generate_measures --study-definition study_definition_measures
